--- a/Home/index.html
+++ b/Home/index.html
@@ -124,6 +124,12 @@
           margin: 0 20px;
         }
       }
+
+      .swiper-button-next.swiper-button-disabled,.swiper-button-prev.swiper-button-disabled {
+        opacity:.35;
+        cursor: auto;
+        /* pointer-events:none; */
+    }
     </style>
   </head>
 
@@ -872,6 +878,7 @@
       var swiper = new Swiper(".slide-container", {
         slidesPerView: 3,
         spaceBetween: 15,
+        sliderPerGroup: 3,
         centerSlide: "true",
         fade: "true",
         grabCursor: "true",
