--- a/Home/sale.html
+++ b/Home/sale.html
@@ -577,6 +577,12 @@
           align-items: center;
           flex-direction: column;
       }}
+
+      .swiper-button-next.swiper-button-disabled,.swiper-button-prev.swiper-button-disabled {
+        /* opacity:.35; */
+        cursor: auto;
+        /* pointer-events:none; */
+    }
     </style>
   </head>
 
