--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -568,7 +568,7 @@
           flex-direction: column;
       }}
 
-      .swiper-button-next.swiper-button-disabled,.swiper-button-prev.swiper-button-disabled {
+      .swiper-button-next.swiper-button-disabled {
         /* opacity:.35; */
         cursor: auto;
         /* pointer-events:none; */
