--- a/Home/rent.html
+++ b/Home/rent.html
@@ -573,7 +573,7 @@
         
 
 
-        .swiper-button-next.swiper-button-disabled,.swiper-button-prev.swiper-button-disabled {
+        .swiper-button-next.swiper-button-disabled{
           /* opacity:.35; */
           cursor: auto;
           /* pointer-events:none; */
