--- a/Home/rent.html
+++ b/Home/rent.html
@@ -571,13 +571,6 @@
             flex-direction: column;
         }}
         
-
-
-        .swiper-button-next.swiper-button-disabled{
-          /* opacity:.35; */
-          cursor: auto;
-          /* pointer-events:none; */
-      }
     </style>
   </head>
 
@@ -1927,7 +1920,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
+        const host = "https://test-masar.onrender.com";
 
         // Function to generate a random ID
         function generateRandomId() {
