--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1920,7 +1920,7 @@
         const propertyList = document
           .getElementById(sectionId)
           .querySelector(".property-list");
-        const host = "https://test-masar.onrender.com";
+        const host = "https://masarbackend-masar-backend.vfbty0.easypanel.host";
 
         // Function to generate a random ID
         function generateRandomId() {
