--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1029,7 +1029,7 @@
       </div>
     </section>
 
-    <!-- <section class="property" id="AlShahama-rent">
+    <section class="property" id="AlShahama-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Shahama</h2>
@@ -1050,9 +1050,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlAjban-rent">
+    <section class="property" id="AlAjban-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Ajban</h2>
@@ -1075,9 +1075,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlBahia-rent">
+    <section class="property" id="AlBahia-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Bahia</h2>
@@ -1096,9 +1096,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlAryam-rent">
+    <section class="property" id="AlAryam-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Aryam</h2>
@@ -1117,9 +1117,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlFalah-rent">
+    <section class="property" id="AlFalah-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Falah City</h2>
@@ -1139,9 +1139,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlFaya-rent">
+    <section class="property" id="AlFaya-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Faya</h2>
@@ -1158,9 +1158,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlGhadeer-rent">
+    <section class="property" id="AlGhadeer-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Ghadeer</h2>
@@ -1183,9 +1183,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlHudairiyat-rent">
+    <section class="property" id="AlHudairiyat-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Hudairiyat Island</h2>
@@ -1204,9 +1204,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlKhatim-rent">
+    <section class="property" id="AlKhatim-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Khatim</h2>
@@ -1230,9 +1230,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlKhaznah-rent">
+    <section class="property" id="AlKhaznah-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Khaznah</h2>
@@ -1254,9 +1254,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlMafraq-rent">
+    <section class="property" id="AlMafraq-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Mafraq</h2>
@@ -1278,9 +1278,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlMaria-rent">
+    <section class="property" id="AlMaria-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Maria Island</h2>
@@ -1299,9 +1299,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlMirfa-rent">
+    <section class="property" id="AlMirfa-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Mirfa</h2>
@@ -1322,9 +1322,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlMuneera-rent">
+    <section class="property" id="AlMuneera-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Muneera</h2>
@@ -1347,9 +1347,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlMuntazah-rent">
+    <section class="property" id="AlMuntazah-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Muntazah</h2>
@@ -1372,9 +1372,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlNahda-rent">
+    <section class="property" id="AlNahda-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Nahda</h2>
@@ -1393,9 +1393,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlGurm-rent">
+    <section class="property" id="AlGurm-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Gurm</h2>
@@ -1420,9 +1420,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlRahaBeach-rent">
+    <section class="property" id="AlRahaBeach-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Raha Beach</h2>
@@ -1446,9 +1446,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="GolfGardens-rent">
+    <section class="property" id="GolfGardens-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Golf Gardens</h2>
@@ -1468,9 +1468,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlRawdah-rent">
+    <section class="property" id="AlRawdah-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Rawdah</h2>
@@ -1493,9 +1493,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlReef-rent">
+    <section class="property" id="AlReef-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Reef</h2>
@@ -1515,9 +1515,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlReem-rent">
+    <section class="property" id="AlReem-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Reem Island</h2>
@@ -1538,9 +1538,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlSilaa-rent">
+    <section class="property" id="AlSilaa-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Silaa</h2>
@@ -1558,9 +1558,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlWathba-rent">
+    <section class="property" id="AlWathba-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Wathba</h2>
@@ -1585,9 +1585,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="HydraVillage-rent">
+    <section class="property" id="HydraVillage-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Hydra Village</h2>
@@ -1612,10 +1612,10 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
    
-    <!-- <section class="property" id="Liwa-rent">
+    <section class="property" id="Liwa-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Liwa</h2>
@@ -1637,9 +1637,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="Masdar-rent">
+    <section class="property" id="Masdar-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Masdar City</h2>
@@ -1658,8 +1658,8 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
-<!-- 
+    </section>
+
     <section class="property" id="Musaffah-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
@@ -1679,9 +1679,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlNareel-rent">
+    <section class="property" id="AlNareel-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Nareel Island</h2>
@@ -1702,9 +1702,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="Ramhan-rent">
+    <section class="property" id="Ramhan-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Ramhan Island</h2>
@@ -1727,9 +1727,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="AlSaadiyat-rent">
+    <section class="property" id="AlSaadiyat-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Saadiyat Island</h2>
@@ -1751,9 +1751,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="SasAlNakheel-rent">
+    <section class="property" id="SasAlNakheel-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Sas Al Nakheel</h2>
@@ -1773,9 +1773,9 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="property" id="Yas-rent">
+    <section class="property" id="Yas-rent">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Yas Island</h2>
@@ -1795,7 +1795,7 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
