--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1863,7 +1863,7 @@
           { id: "AlMuntazah-rent", city: "Al Muntazah" },
           { id: "AlNahda-rent", city: "Al Nahda" },
           { id: "AlGurm-rent", city: "Al Gurm" },
-          { id: "RahaGardens-rent", city: "Raha Gardens" },
+          { id: "RahaGardens-rent", city: "Al Raha Gardens" },
           { id: "AlRahaBeach-rent", city: "Al Raha Beach" },
           { id: "GolfGardens-rent", city: "Golf Gardens" },
           { id: "AlRahba-rent", city: "Al Rahba" },
