--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -545,16 +545,29 @@
         margin: 0 30px;
         overflow: hidden;
       }
-      .swiper-navBtn {
-        color: #fff;
+      #swiper-navBtn-next,#swiper-navBtn-prev {
         height: 40px;
         width: 40px;
         background:#192f63;
-        border-radius: 50%;
+        border-radius: 35%;
+        cursor: pointer;
+        border: none;
+        text-align: center;
       }
-      .swiper-navBtn::before,
-      .swiper-navBtn::after {
+      #swiper-navBtn-next::before,#swiper-navBtn-prev::before,
+      #swiper-navBtn-next::after,#swiper-navBtn-prev::after {
         font-size: 18px;
+      }
+
+      #swiper-navBtn-next{
+        position: absolute;
+        right: 10px; /* Adjust this value as needed */
+      }
+
+      #swiper-navBtn-prev{
+        position: absolute;
+        left: 10px; /* Adjust this value as needed */
+
       }
   
       .swiper-pagination-bullet {
@@ -876,16 +889,14 @@
           spaces, health facilities, parks, entertainment options, cycle lanes
           and mosques have been added.
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
       </div>
     </section>
 
@@ -901,18 +912,14 @@
           Maktoum Bin Rashid Road (E11) runs alongside the community providing
           easy access to the neighbouring areas.
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
-      </div>
-    </section>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
 
     <section class="property" id="Masder-off">
       <div class="container-rent">
@@ -924,16 +931,14 @@
           state-owned Mubadala Investment Company, with the majority of seed
           capital provided by the Government of Abu Dhabi
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
       </div>
     </section>
 
@@ -951,16 +956,14 @@
           districts of both emirates. AL Ghadeer is one of the popular areas for
           buying affordable apartments in Abu Dhabi.
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
       </div>
     </section>
 
@@ -980,16 +983,14 @@
           is the waterfront lifestyle, luxurious amenities and the Al Gurm
           Resort.
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
       </div>
     </section>
 
@@ -1008,16 +1009,14 @@
           seeking a deluxe community that’s complete with entertainment, culture
           and world-class amenities.
         </p>
-        <div class="container swiper">
+       <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
-        </div>           
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
       </div>
     </section>
 
@@ -1027,18 +1026,18 @@
       var swiper = new Swiper(".slide-container", {
         slidesPerView: 3,
         spaceBetween: 15,
-        sliderPerGroup: 3,
+        slidesPerGroup: 1,
         centerSlide: "true",
         fade: "true",
         grabCursor: "true",
         pagination: {
-          el: ".swiper-pagination",
+          el: ".swiper-pagination1",
           clickable: true,
           dynamicBullets: true,
         },
         navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
+          nextEl: ".swiper-button-next1",
+          prevEl: ".swiper-button-prev1",
         },
 
         breakpoints: {
