--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -705,15 +705,13 @@
           Al Reem Island Abu Dhabi to choose from – luxury penthouses,
           apartments and stunning waterfront villas.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>
       </div>
     </section>
@@ -731,15 +729,13 @@
           mostly for the Island’s Cultural District that is expected to include
           eight museums.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>      
       </div>
     </section>
@@ -758,18 +754,14 @@
           residence, besides a tranquil wellness center amidst serene
           surroundings and open bay views.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>
-      </div>
-    </section>
 
     <section class="property" id="BloomGardens-off">
       <div class="container-rent">
@@ -787,15 +779,13 @@
           planned to provide all the facilities within the boundaries. It
           already has a community clubhouse and playgrounds.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>
       </div>
     </section>
@@ -811,15 +801,13 @@
           multi-purpose leisure, shopping and entertainment center at an
           estimated total cost of over billion.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>      
       </div>
     </section>
@@ -838,15 +826,13 @@
           between Saadiyat Island and Yas Island, Jubail Island is a stunning
           natural retreat located minutes away from the bustling city centre.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>      
       </div>
     </section>
@@ -861,15 +847,13 @@
           Island and is home to various blue chip companies and local, regional
           and international institutions.
         </p>
-        <div class="container swiper">
+        <div class="container swiper" style="display: grid;align-items: center;">
           <div class="slide-container">
-              <ul class="property-list swiper-wrapper">
-  
-              </ul>
-            </div>
-          <div class="swiper-button-next swiper-navBtn"></div>
-          <div class="swiper-button-prev swiper-navBtn"></div>
-          <div class="swiper-pagination"></div>
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
         </div>      
       </div>
     </section>
