--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1250,7 +1250,11 @@
 
             <ul class="social-list">
               <li>
-                <a href="https://www.facebook.com/profile.php?id=61556005683471&mibextid=ZbWKwL" class="social-link" target="_blank">
+                <a
+                  href="https://www.facebook.com/profile.php?id=61556005683471&mibextid=ZbWKwL"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon
                     name="logo-facebook"
                     style="font-size: 30px"
@@ -1268,7 +1272,11 @@
               </li>
 
               <li>
-                <a href="https://www.tiktok.com/@masar_real_estate?is_from_webapp=1&sender_device=pc" class="social-link" target="_blank">
+                <a
+                  href="https://www.tiktok.com/@masar_real_estate?is_from_webapp=1&sender_device=pc"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon
                     name="logo-TikTok"
                     style="font-size: 30px"
@@ -1278,14 +1286,46 @@
 
               <li>
                 <a href="#" class="social-link" target="_blank">
-                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0,0,256,256">
-                    <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(8,8)"><path d="M18.5,2c-7.75,0 -12.5,9.25 -12.5,14c0,0 3.25,-12 13,-12c3.625,0 6,2 6,2c0,0 -1,-4 -6.5,-4zM17.5,7c-1.933,0 -3.5,1.567 -3.5,3.5c0,1.933 1.567,3.5 3.5,3.5c1.933,0 3.5,-1.567 3.5,-3.5c0,-1.933 -1.567,-3.5 -3.5,-3.5zM20,16c0,0 -1,1 -5,1v10.5c0,1.381 1.119,2.5 2.5,2.5c1.381,0 2.5,-1.119 2.5,-2.5z"></path></g></g>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    x="0px"
+                    y="0px"
+                    width="30"
+                    height="30"
+                    viewBox="0,0,256,256"
+                  >
+                    <g
+                      fill="#ffffff"
+                      fill-rule="nonzero"
+                      stroke="none"
+                      stroke-width="1"
+                      stroke-linecap="butt"
+                      stroke-linejoin="miter"
+                      stroke-miterlimit="10"
+                      stroke-dasharray=""
+                      stroke-dashoffset="0"
+                      font-family="none"
+                      font-weight="none"
+                      font-size="none"
+                      text-anchor="none"
+                      style="mix-blend-mode: normal"
+                    >
+                      <g transform="scale(8,8)">
+                        <path
+                          d="M18.5,2c-7.75,0 -12.5,9.25 -12.5,14c0,0 3.25,-12 13,-12c3.625,0 6,2 6,2c0,0 -1,-4 -6.5,-4zM17.5,7c-1.933,0 -3.5,1.567 -3.5,3.5c0,1.933 1.567,3.5 3.5,3.5c1.933,0 3.5,-1.567 3.5,-3.5c0,-1.933 -1.567,-3.5 -3.5,-3.5zM20,16c0,0 -1,1 -5,1v10.5c0,1.381 1.119,2.5 2.5,2.5c1.381,0 2.5,-1.119 2.5,-2.5z"
+                        ></path>
+                      </g>
+                    </g>
                   </svg>
                 </a>
               </li>
 
               <li>
-                <a href="https://accounts.snapchat.com/v2/welcome" class="social-link" target="_blank">
+                <a
+                  href="https://accounts.snapchat.com/v2/welcome"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon
                     name="logo-snapchat"
                     style="font-size: 30px"
@@ -1294,13 +1334,22 @@
               </li>
 
               <li>
-                <a href="https://www.instagram.com/masar.realestate.ae?igsh=MWY0bGRtYWw2cm1oZA==" class="social-link" style="font-size: 30px" target="_blank">
+                <a
+                  href="https://www.instagram.com/masar.realestate.ae?igsh=MWY0bGRtYWw2cm1oZA=="
+                  class="social-link"
+                  style="font-size: 30px"
+                  target="_blank"
+                >
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
 
               <li>
-                <a href="https://www.linkedin.com/company/101589068/admin/feed/posts/?feedType=following" class="social-link" target="_blank">
+                <a
+                  href="https://www.linkedin.com/company/101589068/admin/feed/posts/?feedType=following"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon
                     name="logo-Linkedin"
                     style="font-size: 30px"
@@ -1309,7 +1358,11 @@
               </li>
 
               <li>
-                <a href="https://www.pinterest.com/Masar16/" class="social-link" target="_blank">
+                <a
+                  href="https://www.pinterest.com/Masar16/"
+                  class="social-link"
+                  target="_blank"
+                >
                   <ion-icon
                     name="logo-Pinterest"
                     style="font-size: 30px"
