--- a/Home/rent.html
+++ b/Home/rent.html
@@ -2033,14 +2033,14 @@
         });
 
         // Initialize swiper for this section
-        var swiper = new Swiper(`#${sectionId} .mySwiper`, {
+        var swiper = new Swiper(`.mySwiper`, {
           grabCursor: true,
           pagination: {
-            el: `#${sectionId}.swiper-pagination`,
+            el: `.swiper-pagination`,
           },
           navigation: {
-            nextEl: `#${sectionId} .swiper-button-next`,
-            prevEl: `#${sectionId} .swiper-button-prev`,
+            nextEl: `.swiper-button-next`,
+            prevEl: `.swiper-button-prev`,
           },
         });
       }
