--- a/Home/index.html
+++ b/Home/index.html
@@ -858,6 +858,25 @@
       </div>
     </section>
 
+    <section class="property" id="property4">
+      <div class="container-rent">
+        <p class="section-subtitle">Properties</p>
+
+        <h2 class="h2 section-title">
+          Explore Commercial Propertie
+        </h2>
+
+        <div class="container swiper" style="display: grid;align-items: center;">
+          <div class="slide-container">
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
+      </div>
+    </section>
+
     <section class="property" id="property3">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
@@ -876,6 +895,8 @@
         </div>
       </div>
     </section>
+
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -944,6 +965,12 @@
             endpoint:
               '/property/search?propertyPage=Home&propertySection=property3',
           },
+          {
+            id: 'property4',
+            title: 'Explore Commercial Propertie',
+            endpoint:
+              '/property/search?propertyPage=Home&propertySection=property4',
+          },
           // Add more sections as needed
         ];
 
@@ -967,6 +994,7 @@
             document.getElementById('property1').style.display = 'none';
             document.getElementById('property2').style.display = 'none';
             document.getElementById('property3').style.display = 'none';
+            document.getElementById('property4').style.display = 'none';
             document.getElementById('hero').style.display = 'none';
             document.getElementById('ex').style.display = 'none';
           });
@@ -987,6 +1015,7 @@
             document.getElementById('property1').style.display = 'none';
             document.getElementById('property2').style.display = 'none';
             document.getElementById('property3').style.display = 'none';
+            document.getElementById('property4').style.display = 'none';
             document.getElementById('hero').style.display = 'none';
             document.getElementById('ex').style.display = 'none';
           });
@@ -1007,6 +1036,7 @@
             document.getElementById('property1').style.display = 'none';
             document.getElementById('property2').style.display = 'none';
             document.getElementById('property3').style.display = 'none';
+            document.getElementById('property4').style.display = 'none';
             document.getElementById('hero').style.display = 'none';
             document.getElementById('ex').style.display = 'none';
           });
