--- a/Home/rent.html
+++ b/Home/rent.html
@@ -1863,50 +1863,50 @@
         const sections = [
           { id: "AbuDhabi-rent", city: "Abu Dhabi City" },
           { id: "Rabdan-rent", city: "Rabdan" },
-          { id: "AlAjban-rent", city: "Al Ajban" },
-          { id: "AlBahia-rent", city: "Al Bahia" },
-          { id: "AlAryam-rent", city: "Al Aryam" },
-          { id: "AlFalah-rent", city: "Al Falah City" },
-          { id: "AlFaya-rent", city: "Al Faya" },
-          { id: "AlGhadeer-rent", city: "Al Ghadeer" },
-          { id: "AlHudairiyat-rent", city: "Al Hudairiyat Island" },
-          { id: "AlKhatim-rent", city: "Al Khatim" },
-          { id: "AlKhaznah-rent", city: "Al Khaznah" },
-          { id: "AlMafraq-rent", city: "Al Mafraq" },
-          { id: "AlMaria-rent", city: "Al Maria Island" },
-          { id: "AlMirfa-rent", city: "Al Mirfa" },
-          { id: "AlMuneera-rent", city: "Al Muneera" },
-          { id: "AlMuntazah-rent", city: "Al Muntazah" },
-          { id: "AlNahda-rent", city: "Al Nahda" },
-          { id: "AlGurm-rent", city: "Al Gurm" },
+          //{ id: "AlAjban-rent", city: "Al Ajban" },
+          //{ id: "AlBahia-rent", city: "Al Bahia" },
+          //{ id: "AlAryam-rent", city: "Al Aryam" },
+          //{ id: "AlFalah-rent", city: "Al Falah City" },
+          //{ id: "AlFaya-rent", city: "Al Faya" },
+          //{ id: "AlGhadeer-rent", city: "Al Ghadeer" },
+          //{ id: "AlHudairiyat-rent", city: "Al Hudairiyat Island" },
+          //{ id: "AlKhatim-rent", city: "Al Khatim" },
+          //{ id: "AlKhaznah-rent", city: "Al Khaznah" },
+          //{ id: "AlMafraq-rent", city: "Al Mafraq" },
+          //{ id: "AlMaria-rent", city: "Al Maria Island" },
+          //{ id: "AlMirfa-rent", city: "Al Mirfa" },
+          //{ id: "AlMuneera-rent", city: "Al Muneera" },
+          //{ id: "AlMuntazah-rent", city: "Al Muntazah" },
+          //{ id: "AlNahda-rent", city: "Al Nahda" },
+          //{ id: "AlGurm-rent", city: "Al Gurm" },
           { id: "AlRahaGardens-rent", city: "Al Raha Gardens" },
-          { id: "AlRahaBeach-rent", city: "Al Raha Beach" },
-          { id: "GolfGardens-rent", city: "Golf Gardens" },
+          //{ id: "AlRahaBeach-rent", city: "Al Raha Beach" },
+          //{ id: "GolfGardens-rent", city: "Golf Gardens" },
           { id: "AlRahba-rent", city: "Al Rahba" },
-          { id: "AlRawdah-rent", city: "Al Rawdah" },
-          { id: "AlReef-rent", city: "Al Reef" },
-          { id: "AlReem-rent", city: "Al Reem Island" },
+          //{ id: "AlRawdah-rent", city: "Al Rawdah" },
+          //{ id: "AlReef-rent", city: "Al Reef" },
+          //{ id: "AlReem-rent", city: "Al Reem Island" },
           { id: "AlSamha-rent", city: "Al Samha" },
-          { id: "AlShahama-rent", city: "Al Shahama" },
+          //{ id: "AlShahama-rent", city: "Al Shahama" },
           { id: "AlShamkha-rent", city: "Al Shamkha" },
           { id: "AlRiyadh-rent", city: "Al Riyadh" },
           { id: "AlShawamekh-rent", city: "Al Shawamekh" },
-          { id: "AlSilaa-rent", city: "Al Silaa" },
-          { id: "AlWathba-rent", city: "Al Wathba" },
+          //{ id: "AlSilaa-rent", city: "Al Silaa" },
+          //{ id: "AlWathba-rent", city: "Al Wathba" },
           { id: "Baniyas-rent", city: "Baniyas" },
-          { id: "HydraVillage-rent", city: "Hydra Village" },
+          //{ id: "HydraVillage-rent", city: "Hydra Village" },
           { id: "Khalifa-rent", city: "Khalifa City" },
           { id: "Shakhbout-rent", city: "Shakhbout" },
           { id: "MohamedBinZayed-rent", city: "Mohamed Bin Zayed" },
           { id: "MadinetZayed-rent", city: "Madinet Zayed" },
-          { id: "Liwa-rent", city: "Liwa" },
-          { id: "Masdar-rent", city: "Masdar City" },
-          { id: "Musaffah-rent", city: "Musaffah" },
-          { id: "AlNareel-rent", city: "Al Nareel Island" },
-          { id: "Ramhan-rent", city: "Ramhan Island" },
-          { id: "AlSaadiyat-rent", city: "Al Saadiyat Island" },
-          { id: "SasAlNakheel-rent", city: "Sas Al Nakheel" },
-          { id: "Yas-rent", city: "Yas Island" },
+          //{ id: "Liwa-rent", city: "Liwa" },
+         // { id: "Masdar-rent", city: "Masdar City" },
+          //{ id: "Musaffah-rent", city: "Musaffah" },
+         // { id: "AlNareel-rent", city: "Al Nareel Island" },
+         // { id: "Ramhan-rent", city: "Ramhan Island" },
+         // { id: "AlSaadiyat-rent", city: "Al Saadiyat Island" },
+         // { id: "SasAlNakheel-rent", city: "Sas Al Nakheel" },
+         // { id: "Yas-rent", city: "Yas Island" },
 
           // Add more sections as needed
         ];
