--- a/Home/sale.html
+++ b/Home/sale.html
@@ -1868,50 +1868,50 @@
         const sections = [
           { id: "AbuDhabi-sale", city: "Abu Dhabi City" },
           { id: "Rabdan-sale", city: "Rabdan" },
-          { id: "AlAjban-sale", city: "Al Ajban" },
-          { id: "AlBahia-sale", city: "Al Bahia" },
-          { id: "AlAryam-sale", city: "Al Aryam" },
-          { id: "AlFalah-sale", city: "Al Falah City" },
-          { id: "AlFaya-sale", city: "Al Faya" },
-          { id: "AlGhadeer-sale", city: "Al Ghadeer" },
-          { id: "AlHudairiyat-sale", city: "Al Hudairiyat Island" },
-          { id: "AlKhatim-sale", city: "Al Khatim" },
-          { id: "AlKhaznah-sale", city: "Al Khaznah" },
-          { id: "AlMafraq-sale", city: "Al Mafraq" },
-          { id: "AlMaria-sale", city: "Al Maria Island" },
-          { id: "AlMirfa-sale", city: "Al Mirfa" },
-          { id: "AlMuneera-sale", city: "Al Muneera" },
-          { id: "AlMuntazah-sale", city: "Al Muntazah" },
-          { id: "AlNahda-sale", city: "Al Nahda" },
-          { id: "AlGurm-sale", city: "Al Gurm" },
+          //{ id: "AlAjban-sale", city: "Al Ajban" },
+          //{ id: "AlBahia-sale", city: "Al Bahia" },
+          //{ id: "AlAryam-sale", city: "Al Aryam" },
+          //{ id: "AlFalah-sale", city: "Al Falah City" },
+          //{ id: "AlFaya-sale", city: "Al Faya" },
+          //{ id: "AlGhadeer-sale", city: "Al Ghadeer" },
+          //{ id: "AlHudairiyat-sale", city: "Al Hudairiyat Island" },
+          //{ id: "AlKhatim-sale", city: "Al Khatim" },
+          //{ id: "AlKhaznah-sale", city: "Al Khaznah" },
+          //{ id: "AlMafraq-sale", city: "Al Mafraq" },
+          //{ id: "AlMaria-sale", city: "Al Maria Island" },
+          //{ id: "AlMirfa-sale", city: "Al Mirfa" },
+          //{ id: "AlMuneera-sale", city: "Al Muneera" },
+          //{ id: "AlMuntazah-sale", city: "Al Muntazah" },
+          //{ id: "AlNahda-sale", city: "Al Nahda" },
+          //{ id: "AlGurm-sale", city: "Al Gurm" },
           { id: "AlRahaGardens-sale", city: "Al Raha Gardens" },
-          { id: "AlRahaBeach-sale", city: "Al Raha Beach" },
-          { id: "RahaGolfGardens-sale", city: "Golf Gardens" },
+          //{ id: "AlRahaBeach-sale", city: "Al Raha Beach" },
+          //{ id: "RahaGolfGardens-sale", city: "Golf Gardens" },
           { id: "AlRahba-sale", city: "Al Rahba" },
-          { id: "AlRawdah-sale", city: "Al Rawdah" },
-          { id: "AlReef-sale", city: "Al Reef" },
-          { id: "AlReem-sale", city: "Al Reem Island" },
+          //{ id: "AlRawdah-sale", city: "Al Rawdah" },
+          //{ id: "AlReef-sale", city: "Al Reef" },
+          //{ id: "AlReem-sale", city: "Al Reem Island" },
           { id: "AlSamha-sale", city: "Al Samha" },
-          { id: "AlShahama-sale", city: "Al Shahama" },
+          //{ id: "AlShahama-sale", city: "Al Shahama" },
           { id: "AlShamkha-sale", city: "Al Shamkha" },
           { id: "AlRiyadh-sale", city: "Al Riyadh" },
           { id: "AlShawamekh-sale", city: "Al Shawamekh" },
-          { id: "AlSilaa-sale", city: "Al Silaa" },
-          { id: "AlWathba-sale", city: "Al Wathba" },
+          //{ id: "AlSilaa-sale", city: "Al Silaa" },
+          //{ id: "AlWathba-sale", city: "Al Wathba" },
           { id: "Baniyas-sale", city: "Baniyas" },
-          { id: "HydraVillage-sale", city: "Hydra Village" },
+          //{ id: "HydraVillage-sale", city: "Hydra Village" },
           { id: "Khalifa-sale", city: "Khalifa City" },
           { id: "Shakhbout-sale", city: "Shakhbout" },
           { id: "MohamedBinZayed-sale", city: "Mohamed Bin Zayed" },
           { id: "MadinetZayed-sale", city: "Madinet Zayed" },
-          { id: "Liwa-sale", city: "Liwa" },
-          { id: "Masdar-sale", city: "Masdar City" },
-          { id: "Musaffah-sale", city: "Musaffah" },
-          { id: "AlNareel-sale", city: "Al Nareel Island" },
-          { id: "Ramhan-sale", city: "Ramhan Island" },
-          { id: "AlSaadiyat-sale", city: "Al Saadiyat Island" },
-          { id: "SasAlNakheel-sale", city: "Sas Al Nakheel" },
-          { id: "Yas-sale", city: "Yas Island" },
+          //{ id: "Liwa-sale", city: "Liwa" },
+          //{ id: "Masdar-sale", city: "Masdar City" },
+          //{ id: "Musaffah-sale", city: "Musaffah" },
+          //{ id: "AlNareel-sale", city: "Al Nareel Island" },
+          //{ id: "Ramhan-sale", city: "Ramhan Island" },
+          //{ id: "AlSaadiyat-sale", city: "Al Saadiyat Island" },
+          //{ id: "SasAlNakheel-sale", city: "Sas Al Nakheel" },
+          //{ id: "Yas-sale", city: "Yas Island" },
 
           // Add more sections as needed
         ];
