--- a/Home/sale.html
+++ b/Home/sale.html
@@ -807,7 +807,7 @@
       </div>
     </section>
 
-    <section class="property" id="RahaGardens-sale">
+    <section class="property" id="AlRahaGardens-sale">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
         <h2 class="h2 section-title">Al Raha Gardens</h2>
