--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -223,7 +223,7 @@
       <div class="background-detail">
         <img
           class="background-img"
-          src="img/7ad0550218f646f12b1405cdc835a1bc.jpg"
+          src="img/WhatsApp Image 2024-05-17 at 2.26.17 PM.jpeg"
           style="width: 100%"
         />
       </div>
