--- a/Home/rent.html
+++ b/Home/rent.html
@@ -2035,6 +2035,7 @@
         // Initialize swiper for this section
         var swiper = new Swiper(`.mySwiper`, {
           grabCursor: true,
+          reverseDirection:true,
           pagination: {
             el: `.swiper-pagination`,
           },
